[package]
name = "log_anywhere"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "^1", features = ["full"] }
anyhow = "^1.0"
async-trait = "^0.1"
log = { version = "^0.4", features =["std"] }
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
crossbeam = "^0.8"
